--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-jest": "^27.0.6",
     "date-fns": "^2.23.0",
     "dayjs": "^1.10.6",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2"
